Update the document for course
